--- a/src/app/user/[username]/profile.module.css
+++ b/src/app/user/[username]/profile.module.css
@@ -1,19 +1,20 @@
 .desc {
   font-size: 1rem;
-  width: 30%;
+  width: 50%;
   text-align: center;
 }
 .buttonTitle {
   font-size: 1.5rem;
+  color: #34bdff;
 }
 .howToUse {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-style: italic;
 }
 .userWelcome {
   font-size: 2.5rem;
 }
 .pageContainer {
-  width: 100vw;
   height: calc(100vh-48px);
   display: flex;
   flex-direction: column;
