added class to nav links and styled them in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,3 +48,9 @@ body {
 .confirm-button:active {
   background-color: #8a6a85;
 }
+.navLinks:visited {
+  color: blueviolet;
+}
+.navLinks:hover {
+  color: greenyellow;
+}
