Borders edited to 6px and highlights on hover changed for contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@ body {
   background-color: #8a6a85;
 }
 .navLinks:visited {
-  color: blueviolet;
+  color: #c67afe;
 }
 .navLinks:hover {
   color: greenyellow;
