--- a/src/app/resources/resources.css
+++ b/src/app/resources/resources.css
@@ -1,10 +1,17 @@
+.resourceMain {
+  flex-direction: column;
+}
+
+.context {
+  font-size: 1.5rem;
+}
+
 .resources {
   font-size: 3rem;
   text-align: center;
-  border: 2px solid;
   margin: 0 auto;
   font-weight: bold;
-  color: #2bd872;
+  color: white;
   padding: 10px;
   border-radius: 10px;
 }
@@ -16,7 +23,7 @@ h5,
 h6 {
   font-size: 2rem;
   text-align: center;
-  border: 2px solid;
+  text-decoration: underline;
   margin: 0 auto;
   font-weight: bold;
   color: #2bd872;
@@ -26,9 +33,9 @@ h6 {
 div {
   text-align: center;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 20px;
   padding: 20px;
-  border: 2px solid #2bd872;
+  border: 6px solid #2bd872;
   border-radius: 10px;
   padding: 10px;
 }
