added code to main to add nav link into story and hid the header on the story page

--- a/src/app/user/[username]/story/story.css
+++ b/src/app/user/[username]/story/story.css
@@ -312,6 +312,9 @@ img {
     width: 100%;
   }
 }
+header {
+  display: none;
+}
 @media screen and (max-width: 600px) {
   #word-storage {
     font-size: 0.7rem;
