add className to button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,10 @@ body {
 .navLinks:hover {
   color: greenyellow;
 }
+
+@media (min-width: 600px) {
+  body {
+    flex-direction: column;
+    padding: 10px;
+  }
+}
