--- a/src/app/resources/resources.css
+++ b/src/app/resources/resources.css
@@ -4,6 +4,7 @@
 
 .context {
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .resources {
@@ -30,7 +31,7 @@ h6 {
   padding: 10px;
 }
 
-div {
+/* div {
   text-align: center;
   max-width: 800px;
   margin: 20px;
@@ -38,7 +39,7 @@ div {
   border: 6px solid #2bd872;
   border-radius: 10px;
   padding: 10px;
-}
+} */
 
 .links {
   text-decoration: underline;
@@ -52,16 +53,45 @@ div {
 }
 
 .national,
+.east,
+.Suffolk,
+.Cambridge,
+.midlands,
+.Leicester,
+.yorkshire,
+.nw
+/* .suffolk,
 .norfolk,
-.suffolk,
 .cambridge,
 .derby,
 .notts,
 .leicester,
 .humber,
-.liverpool {
-  font-weight: bold;
-  font-size: 1rem;
-  color: greenyellow;
+.liverpool */
+{
+  text-align: center;
+  max-width: 800px;
+  margin: 20px;
+  padding: 20px;
+  border: 6px solid #2bd872;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.suffolk,
+.norfolk,
+.cambridge,
+.derby,
+.notts,
+.leicester,
+.humber,
+.liverpool
+{
+  text-align: center;
+  max-width: 800px;
+  margin: 20px;
+  padding: 20px;
+  border: 3px solid #2bd872;
+  border-radius: 10px;
   padding: 10px;
 }
