--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ body {
   border-radius: 8px;
   cursor: pointer;
   font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: bold;
   transition: background-color 0.5s ease, transform 0.1s ease;
 
